editor alignment fixing start: mobile

--- a/source/sass/blocks/aligner.scss
+++ b/source/sass/blocks/aligner.scss
@@ -30,7 +30,10 @@
     &--form {
       width: 100%;
     }
-    &--panorama {
+    &--gallery {
+      width: 940px;
+    }
+    &--gallery {
       width: 940px;
     }
   }
