--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,6 +4,9 @@ $navy: #283645;
 $pink: #d22856;
 
 $mobile-max: 659px;
-$tablet: 660px;
+// $tablet: 660px;
 $tablet-max: 959px;
-$desktop: 960px;
+// $desktop: 960px;
+
+$tablet: 2000px;
+$desktop: 3000px;
